# safe_unwrap-rs

./: Cargo.toml  README.md
examples/: unwrap_or_abort.rs
examples/failing-safe-unwrap/: Cargo.toml
examples/failing-safe-unwrap/src/: main.rs
src/: lib.rs
